# vector-viewer

./: .env.example  .gitignore  =6.6.0  CHANGELOG  CHANGELOG.md  CNAME  FEATURES.md  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  RELEASE_REASON.md  ROADMAP.md  bumpver.toml  copilot-instructions.md  create_sample_data.py  mypy.ini  pyproject.toml  pytest.ini  run.bat  run.sh  test_chroma_list.py
.github/: copilot-instructions.md
.github/agents/: qt-ui.agent.md  unit-tests.agent.md
.github/instructions/: coding.instructions.md  testing.instructions.md  workflows.instructions.md
.github/workflows/: ci-tests.yml  netlify-deploy.yml  publish copy.yml  publish.yml  publish_and_release.yml  release-and-publish.yml
docs/: CODING_RULES.md  FEATURES.md  GETTING_STARTED.md  LLM_INTEGRATION_AND_CONFIGURATION.md  MULTI_DATABASE_DEVELOPER_GUIDE.md  MULTI_DATABASE_IMPLEMENTATION_COMPLETE.md  MULTI_DATABASE_INSTALLATION.md  MULTI_DATABASE_QUICKSTART.md  MULTI_DATABASE_USER_GUIDE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  RELEASE_PROCESS.md  RELEASE_REASON.md  TODO.md  architecture.md  artifact_resolution.md  copilot-working-notes.md  core_vs_pro_architecture.md  embedding_provider_guide.md  embedding_provider_todo.md  future_optimizations.md  info_panel.md  info_panel_checklist.md  info_panel_implementation.md  info_panel_layout.md  known_embedding_models.md  lazy_imports_implementation.md  milvus_integration.md  multi_database_support_outline.md  performance_optimization.md  rag-builder-layout.md  telemetry.md
docs/llm_providers/: approach.md  fake_provider.md  quickstart.md
docs/providers/: pinecone_default_namespace_limitation.md  pinecone_namespace_support.md
docs/telemetry/: model_telemetry_and_registry.md  unified_telemetry_architecture.md
docs/upcoming/: feature_limitations.md  llm_provider_architecture.md  provider_and_model_comparisons.md  rag_evaluation_feature.md  search_explainability_feature.md
scripts/: add_release_reason.py  run.sh
scripts/installer/: install.ps1  install.sh
site/: index.html  install.ps1  install.sh
src/vector_inspector/: __init__.py  __main__.py  _cli.py  main.py
src/vector_viewer/: __init__.py  main.py
tests/: conftest.py  test_backup_restore_service.py  test_cli.py  test_cluster_saving.py  test_connection_manager.py  test_connections.py  test_copy_vector_to_json.py  test_filter_service.py  test_inline_details_pane.py  test_item_details_embedding.py  test_main.py  test_main_window.py  test_metadata_context.py  test_metadata_navigation.py  test_metadata_view_inline_details.py  test_milvus_connection.py  test_pinecone_connection.py  test_plot_selection.py  test_search_view_inline_details.py  test_settings_service.py  test_shutdown.py  test_timestamp_injection.py  test_weaviate_connection.py
tests/components/: test_ask_ai_dialog.py  test_ask_ai_integration.py  test_create_collection_dialog_validations.py  test_filter_builder.py  test_ingestion_dialog.py  test_inline_details_pane.py  test_item_details_dialog.py  test_item_details_preview.py  test_pagination_controls.py  test_profile_manager_panel.py  test_profile_manager_panel_visibility.py  test_splash_window.py  test_update_details_dialog.py
tests/core/: test_base_connection.py  test_encode_text.py  test_logging.py  test_provider_detection_features.py  test_provider_factory.py  test_qdrant_helpers.py  test_text_generator.py
tests/fakes/: fake_provider.py
tests/integration/: test_clustering_real_embeddings.py  test_multimodal_ingestion.py  test_provider_manager.py
tests/metadata/: test_cache_helpers.py  test_cluster_saving.py  test_data_loading_helpers.py  test_data_operations.py  test_import_export_helpers.py  test_item_update_helpers.py  test_metadata_filters_helper.py  test_metadata_table.py  test_metadata_threads_worker.py  test_plot_selection.py  test_telemetry_settings_panel.py  test_timestamp_injection.py
tests/providers/: test_lancedb_connection.py  test_pgvector_connection.py  test_pinecone_connection.py  test_qdrant_connection.py  test_query_embedding_fields.py  test_weaviate_connection.py
tests/services/: test_app_state.py  test_backup_restore_service.py  test_cluster_runner.py  test_collection_service_edgecases.py  test_connection_manager.py  test_file_ingestion_service.py  test_highlight_settings.py  test_import_export_service.py  test_model_cache.py  test_provider_install_service.py  test_search_ai_service.py  test_search_context.py  test_search_runner.py  test_settings_service.py  test_status_reporter.py  test_status_reporter_timeout.py  test_telemetry_service.py  test_visualization_service.py
tests/ui/: test_backup_restore_dialog.py  test_connection_controller.py  test_connection_manager_panel.py  test_cross_db_migration.py  test_embedding_config_dialog.py  test_llm_console.py  test_llm_settings_panel.py  test_loading_screen.py  test_main_window_default_left_tab.py  test_main_window_telemetry.py  test_provider_install_dialog.py  test_provider_type_dialog.py  (+2 more)
(+174 files in other folders)
