[project]
name = "vector-inspector"
version = "0.2.0"
description = "A comprehensive desktop application for visualizing, querying, and managing vector database data"
authors = [
    {name = "Anthony Dawson", email = "anthonypdawson+github@gmail.com"},
]
dependencies = [
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",
    "pyside6>=6.6.0",
    "PySide6-Addons>=6.10.1",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    "plotly>=5.18.0",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.7.4",
    "pyarrow>=14.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
vector-inspector = "vector_viewer.main:main"

[tool.pdm]
distribution = false

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
[tool.pdm.scripts.vector-inspector]
cmd = "python -m vector_viewer.main"
env = { PYTHONPATH = "src" }

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



# content below this line added by briefcase convert
# This project was generated with 0.3.19 using template: https://github.com/beeware/briefcase-template@v0.3.19
[tool.briefcase]
project_name = "Vector Inspector"
bundle = "com.divinedevops"
version = "0.0.1"
url = "https://github.com/anthonypdawson/vector-viewer"
license.file = "LICENSE"
author = "Anthony Dawson"
author_email = "anthonypdawson@gmail.com"

[tool.briefcase.app.vector-inspector]
formal_name = "Vector Inspector"
description = "A comprehensive desktop application for visualizing, querying, and managing vector database data"
long_description = """More details about the app should go here.
"""
sources = [
    "src/vector_inspector",
]
test_sources = [
    "tests",
]

