[project]
name = "vector-inspector"
version = "0.3.6"
description = "A comprehensive desktop application for visualizing, querying, and managing vector database data"
authors = [
    {name = "Anthony Dawson", email = "anthonypdawson+github@gmail.com"},
]
dependencies = [
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",
    "pyside6>=6.6.0",
    "PySide6-Addons>=6.6.3.1",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    "plotly>=5.18.0",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.7.4",
    "pyarrow>=14.0.0",
    "pinecone>=8.0.0",
    "keyring>=25.7.0",
    "hf-xet>=1.2.0",
    "pymilvus>=2.6.6",
    "lancedb>=0.27.0",
    "psycopg2>=2.9.11",
    "pgvector>=0.4.2",
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://vector-inspector.divinedevops.com"
Source = "https://github.com/anthonypdawson/vector-inspector"
Issues = "https://github.com/anthonypdawson/vector-inspector/issues"
Documentation = "https://github.com/anthonypdawson/vector-inspector#readme"

[project.scripts]
vector-inspector = "vector_inspector.main:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
    "ipython>=8.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "SIM",
    "ARG",
    "RUF",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["vector_inspector"]
[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
[tool.pdm.scripts.vector-inspector]
cmd = "python -m vector_inspector.main"
env = { PYTHONPATH = "src" }

